--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -68,6 +68,392 @@
    "source": [
     "proof_of_collatz()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 2\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Give an overview of the famous penguins data set, explaining\n",
+    "the types of variables it contains. Suggest the types of variables\n",
+    "that should be used to model them in Python, explaining your\n",
+    "rationale\n",
+    "\n",
+    "Data repository for seaborn examples. https://github.com/mwaskom/seaborn-data/blob/master/penguins.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>342.000000</td>\n",
+       "      <td>342.000000</td>\n",
+       "      <td>342.000000</td>\n",
+       "      <td>342.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>43.921930</td>\n",
+       "      <td>17.151170</td>\n",
+       "      <td>200.915205</td>\n",
+       "      <td>4201.754386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>5.459584</td>\n",
+       "      <td>1.974793</td>\n",
+       "      <td>14.061714</td>\n",
+       "      <td>801.954536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>32.100000</td>\n",
+       "      <td>13.100000</td>\n",
+       "      <td>172.000000</td>\n",
+       "      <td>2700.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>39.225000</td>\n",
+       "      <td>15.600000</td>\n",
+       "      <td>190.000000</td>\n",
+       "      <td>3550.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>44.450000</td>\n",
+       "      <td>17.300000</td>\n",
+       "      <td>197.000000</td>\n",
+       "      <td>4050.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>48.500000</td>\n",
+       "      <td>18.700000</td>\n",
+       "      <td>213.000000</td>\n",
+       "      <td>4750.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>59.600000</td>\n",
+       "      <td>21.500000</td>\n",
+       "      <td>231.000000</td>\n",
+       "      <td>6300.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       bill_length_mm  bill_depth_mm  flipper_length_mm  body_mass_g\n",
+       "count      342.000000     342.000000         342.000000   342.000000\n",
+       "mean        43.921930      17.151170         200.915205  4201.754386\n",
+       "std          5.459584       1.974793          14.061714   801.954536\n",
+       "min         32.100000      13.100000         172.000000  2700.000000\n",
+       "25%         39.225000      15.600000         190.000000  3550.000000\n",
+       "50%         44.450000      17.300000         197.000000  4050.000000\n",
+       "75%         48.500000      18.700000         213.000000  4750.000000\n",
+       "max         59.600000      21.500000         231.000000  6300.000000"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "penguins = pd.read_csv('penguins.csv', index_col = 0)\n",
+    "penguins.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>island</th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>species</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Adelie</th>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>3750.0</td>\n",
+       "      <td>MALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adelie</th>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.5</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>186.0</td>\n",
+       "      <td>3800.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adelie</th>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>40.3</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>3250.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adelie</th>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adelie</th>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>19.3</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>3450.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adelie</th>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.3</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>3650.0</td>\n",
+       "      <td>MALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adelie</th>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>38.9</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>3625.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adelie</th>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.2</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>4675.0</td>\n",
+       "      <td>MALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adelie</th>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>34.1</td>\n",
+       "      <td>18.1</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>3475.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adelie</th>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>4250.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+       "species                                                                \n",
+       "Adelie   Torgersen            39.1           18.7              181.0   \n",
+       "Adelie   Torgersen            39.5           17.4              186.0   \n",
+       "Adelie   Torgersen            40.3           18.0              195.0   \n",
+       "Adelie   Torgersen             NaN            NaN                NaN   \n",
+       "Adelie   Torgersen            36.7           19.3              193.0   \n",
+       "Adelie   Torgersen            39.3           20.6              190.0   \n",
+       "Adelie   Torgersen            38.9           17.8              181.0   \n",
+       "Adelie   Torgersen            39.2           19.6              195.0   \n",
+       "Adelie   Torgersen            34.1           18.1              193.0   \n",
+       "Adelie   Torgersen            42.0           20.2              190.0   \n",
+       "\n",
+       "         body_mass_g     sex  \n",
+       "species                       \n",
+       "Adelie        3750.0    MALE  \n",
+       "Adelie        3800.0  FEMALE  \n",
+       "Adelie        3250.0  FEMALE  \n",
+       "Adelie           NaN     NaN  \n",
+       "Adelie        3450.0  FEMALE  \n",
+       "Adelie        3650.0    MALE  \n",
+       "Adelie        3625.0  FEMALE  \n",
+       "Adelie        4675.0    MALE  \n",
+       "Adelie        3475.0     NaN  \n",
+       "Adelie        4250.0     NaN  "
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "penguins.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 344 entries, Adelie to Gentoo\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   island             344 non-null    object \n",
+      " 1   bill_length_mm     342 non-null    float64\n",
+      " 2   bill_depth_mm      342 non-null    float64\n",
+      " 3   flipper_length_mm  342 non-null    float64\n",
+      " 4   body_mass_g        342 non-null    float64\n",
+      " 5   sex                333 non-null    object \n",
+      "dtypes: float64(4), object(2)\n",
+      "memory usage: 18.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "penguins.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "island                 3\n",
+       "bill_length_mm       164\n",
+       "bill_depth_mm         80\n",
+       "flipper_length_mm     55\n",
+       "body_mass_g           94\n",
+       "sex                    2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "penguins.nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sex - categorical ( in python string)\n",
+    "body_mass_g = numerical (in python float)\n",
+    "flipper_lenght_mm =numerical (in python float)\n",
+    "bill_depth_mm -numerical (in python float)\n",
+    "bill_lenght_mm - numerical (in python float)\n",
+    "island = categorical ( in python string)\n",
+    "species = categorical ( in python string)"
+   ]
   }
  ],
  "metadata": {
