readme file and small corrections

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -24,7 +24,26 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "# Task 1\n",
+    "\n",
+    "The Collatz conjecture1 is a famous unsolved problem in mathematics. The problem is to prove that if you start with any positive\n",
+    "integer x and repeatedly apply the function f(x) below, you always get stuck in the repeating sequence 1, 4, 2, 1, 4, 2, . ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "$$ f(x) =\n",
+    "\\begin{cases}\n",
+    "  \\frac{x}{2} & \\text{if } x \\text{ is even} \\\\\n",
+    "  3x + 1 & \\text{otherwise}\n",
+    "\\end{cases}\n",
+    "$$\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -566,19 +585,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "to do:\n",
-    "\n",
-    "<input type=\"checkbox\" id=\"checkbox1\" /> Island, sex,species - what distrubution ?\n",
-    "<br>\n",
-    "<input type=\"checkbox\" id=\"checkbox2\" checked /> publish at least draft \n",
-    "<br>\n",
-    "<input type=\"checkbox\" id=\"checkbox3\" /> create hist and bar plots for each var\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -704,7 +710,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 4  \n",
+    "## Task 4  \n",
     "\n",
     "----\n",
     "\n",
@@ -791,7 +797,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 5  \n",
+    "## Task 5  \n",
     "\n",
     "----\n",
     "\n",
